@@ -216,9 +216,10 @@ class Option {
          *            or OptionType::OT_STRING)
          * \param[in] description a description for the help
          */
-        Option(const std::string &name, char letter,
-                OptionType type = OT_FLAG,
-                const std::string &description = "");
+        Option(const std::string    &name,
+               char                 letter,
+               OptionType           type = OT_FLAG,
+               const std::string    &description = "");
 
     public:
         /**
@@ -355,6 +356,109 @@ class Option {
 };
 
 /* }}} */
+/* OptionGroup {{{ */
+
+/**
+ * \class OptionGroup
+ *
+ * A option group represents a number of options that belongs together, like "debugging options" or
+ * "input configuration". The only task of the option group is to group the listing of options in
+ * the help output which is generated by OptionParser::printHelp().
+ *
+ * The title doesn't have to be unique and can be empty. There's always one option group by default
+ * whose name can be set in the constructor of OptionParser. This makes it possible to use the
+ * option parser without caring about option groups at all.
+ *
+ * \author Bernhard Walle
+ */
+class OptionGroup {
+
+    friend class OptionParser;
+
+    public:
+        /**
+         * \brief Constructor
+         *
+         * Creates a new OptionGroup object with \p title.
+         *
+         * \param[in] title the title for the option group. Once set, this title cannot be changed.
+         * \note The m_title member is non-const to provide an assignment operator.
+         */
+        OptionGroup(const std::string &title="");
+
+        /**
+         * \brief Destructor
+         */
+        virtual ~OptionGroup() {}
+
+    public:
+        /**
+         * \brief Returns the title that has been set in the constructor.
+         *
+         * \return the title of the option group
+         */
+        std::string getTitle() const;
+
+        /**
+         * \brief Returns the options as vector
+         *
+         * \return a reference to the internal representation of options. The vector cannot be
+         *         changed. Use OptionGroup::addOption() instead.
+         * \sa OptionGroup::size()
+         */
+        const std::vector<Option> &options() const;
+
+    protected:
+        /**
+         * \brief Returns the options as vector (non-const)
+         *
+         * The non-const version is only accessible for friends.
+         *
+         * \return a reference to the internal representation of options. The vector cannot be
+         *         changed. Use OptionGroup::addOption() instead.
+         * \sa OptionGroup::size()
+         */
+        std::vector<Option> &options();
+
+    public:
+        /**
+         * \brief Returns the number of options in this group
+         *
+         * Convenience function for OptionGroup::options().size().
+         *
+         * \return the number of options in this option group.
+         */
+        size_t size() const;
+
+        /**
+         * \brief Adds a option to the option group
+         *
+         * \param[in] option the option that should be added.
+         */
+        void addOption(const Option &option);
+
+        /**
+         * \brief Adds an option to the option group
+         *
+         * Convenience method that doesn't need to create an Option object.
+         * See also Option::Option(const std::string &, char, OptionType, const std::string &).
+         *
+         * \param[in] name the option name, see Option::setLongName()
+         * \param[in] letter the short letter, see Option::setLetter()
+         * \param[in] type the option type, see Option::setType()
+         * \param[in] description the option description, see Option::setDescription()
+         */
+        void addOption(const std::string    &name,
+                       char                 letter,
+                       OptionType           type = OT_FLAG,
+                       const std::string    &description = "");
+
+    private:
+        std::string m_title;
+        std::vector<Option> m_options;
+};
+
+/* }}} */
 /* OptionParser {{{ */
 
 /**
@@ -368,9 +472,9 @@ class Option {
  *
  * \code
  * bw::OptionParser op;
- * op.addOption(Option("debug", 'D', bw::OT_FLAG, "Enable debugging output"));
- * op.addOption(Option("help", 'h', bw::OT_FLAG, "Shows this help output"));
- * op.addOption(Option("label", 'l', bw::OT_STRING, "Boot the specified label without prompting"));
+ * op.addOption("debug", 'D', bw::OT_FLAG, "Enable debugging output");
+ * op.addOption("help", 'h', bw::OT_FLAG, "Shows this help output");
+ * op.addOption("label", 'l', bw::OT_STRING, "Boot the specified label without prompting");
  *
  * // do the parsing
  * bool ret = op.parse(argc, argv);
@@ -379,7 +483,7 @@ class Option {
  *
  * // evaluate options
  * if (op.getValue("help").getFlag()) {
- *     op.printHelp(cerr, PACKAGE_STRING " " PACKAGE_VERSION);
+ *     op.printHelp(std::cerr, PACKAGE_STRING " " PACKAGE_VERSION);
  *     return false;
  * }
  *
@@ -398,30 +502,92 @@ class Option {
  * \author Bernhard Walle <bernhard@bwalle.de>
  */
 class OptionParser {
+
+    public:
+        /**
+         * \brief Constructor
+         *
+         * \param[in] defaultGroupName the name of the default option group
+         */
+        OptionParser(const std::string &defaultGroupName="");
+
+        /**
+         * \brief Destructor
+         */
+        virtual ~OptionParser() {}
+
     public:
         /**
          * \brief Adds an option
          *
-         * Adds an option to the OptionParser.
+         * Adds an option to default anonymous group of the OptionParser.
+         *
+         * This is a convenience function for simple option parsing. Code
+         *
+         * \code
+         * bw::OptionGroup anonymouseGroup("");
+         * anonymouseGroup.addOption("bla", 'b', bw::OT_FLAG, "Some description");
+         * anonymouseGroup.addOption("fasel", 'f', bw::OT_FLAG, "Some other description");
+         *
+         * bw::OptionParser parser;
+         * parser.addOptions(anonymouseGroup);
+         * \endcode
+         *
+         * can be replaced with
+         *
+         * \code
+         * bw::OptionParser parser;
+         * parser.addOption("bla", 'b', bw::OT_FLAG, "Some description");
+         * parser.addOption("fasel", 'f', bw::OT_FLAG, "Some other description");
+         * \endcode
          *
          * \param[in] option the option to add
          */
         void addOption(Option option);
 
         /**
-         * \brief Adds an option
+         * \brief Adds an option to the anonymouse grup
          *
          * Convenience method that doesn't need to create an Option object.
          * See also Option::Option(const std::string &, char, OptionType, const std::string &).
+         *
+         * This is a convenience function for simple option parsing. Code
+         *
+         * \code
+         * bw::OptionGroup anonymouseGroup("");
+         * anonymouseGroup.addOption(bw::Option("bla", 'b', bw::OT_FLAG, "Some description"));
+         * anonymouseGroup.addOption(bw::Option("fasel", 'f', bw::OT_FLAG, "Some other description"));
+         *
+         * bw::OptionParser parser;
+         * parser.addOptions(anonymouseGroup);
+         * \endcode
+         *
+         * can be replaced with
+         *
+         * \code
+         * bw::OptionParser parser;
+         * parser.addOption(bw::Option("bla", 'b', bw::OT_FLAG, "Some description"));
+         * parser.addOption(bw::Option("fasel", 'f', bw::OT_FLAG, "Some other description"));
+         * \endcode
          *
          * \param[in] name the option name, see Option::setLongName()
          * \param[in] letter the short letter, see Option::setLetter()
          * \param[in] type the option type, see Option::setType()
          * \param[in] description the option description, see Option::setDescription()
          */
-        void addOption(const std::string &name, char letter,
-                OptionType type = OT_FLAG,
-                const std::string &description = "");
+        void addOption(const std::string    &name,
+                       char                 letter,
+                       OptionType           type = OT_FLAG,
+                       const std::string    &description = "");
+
+        /**
+         * \brief Adds a group of options to the option list
+         *
+         * The group appears as grouped list with a title in the help output.
+         *
+         * \param[in] group the group of options to add
+         */
+        void addOptions(const OptionGroup &group);
 
         /**
          * \brief Prints the help
@@ -497,8 +663,17 @@ class OptionParser {
          */
         Option &findOption(char letter);
 
+        /**
+         * \brief Calculates the total number of options
+         *
+         * The total number of options is the sum of options over all option groups.
+         *
+         * \return the total number of options.
+         */
+        int calcTotalNumberOfOptions() const;
+
     private:
-        std::vector<Option> m_options;
+        std::vector<OptionGroup> m_options;
         std::vector<std::string> m_args;
 };
 
